--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "next": "14.2.13",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
