--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
+    "react-gauge-chart": "^0.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
