--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "14.2.13",
     "nookies": "^2.5.2",
     "react": "^18",
