--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-gauge-chart": "^0.4.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
